--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,16 @@
   	</form-login-config> 
   </login-config>
   
+    <filter>
+        <filter-name>ClickjackingFilter</filter-name>
+        <filter-class>control.ClickjackingFilter</filter-class>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>ClickjackingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+  
       <error-page>
         <error-code>500</error-code>
         <location>/error500.jsp</location>
